<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Settings!</string>
    <string name="app_name">JS Log</string>
    <string name="app_description">Displays JavaScript console messages in the notification bar.</string>
    <string name="title_main_preferences">Preferences</string>
    <string name="notification_preference">Enable notifications</string>
    <string name="title_other_preferences">Other</string>
    <string name="title_about_preference">About JS Log</string>
    <string name="title_about">About JS Log</string>
    <string name="version_about">Version: </string>
    <string name="content_about">A simple way to debug JavaScript code directly on your device as opposed to using USB debugging mode. This application is open-source. Please visit my website to see the source code or if you have any suggestions or problems.</string>
    <string name="url_about">http://zoeetrope.com/</string>
    <string name="close_detail">Close</string>
    <string name="remove_detail">Remove</string>
    <string name="settings_detail">Settings</string>
    <string name="service_started">JS Log started.</string>
    <string name="service_running">JS Log is running.</string>
    <string name="service_description">Tap here to change the settings.</string>
    <string name="line_prefix">Line: </string>
    <string name="line_of"> of </string>
    <string name="line_unknown">unknown</string>
</resources>
